# console_todo_app

./: QWEN.md  README.md  TEST.md  __init__.py  pyproject.toml  run_todo.py  test_basic_functionality.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: settings.py
specs/001-cli-menu-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-menu-loop/checklists/: cli.md  (+1 more)
specs/002-cli-visual-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-task-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __main__.py
src/cli/: cli_app.py
src/models/: todo_item.py  visual_elements.py
src/services/: emoji_mapping_service.py  navigation_service.py  terminal_compatibility_detector.py  terminal_compatibility_service.py  todo_service.py  visual_element_service.py  visual_enhancement_service.py
src/storage/: file_storage.py
src/utils/: file_utils.py  handlers.py  keyboard_input.py  keyboard_listener.py  performance.py  terminal_utils.py  validation.py
tests/: conftest.py  test_basic_functionality.py  test_implementation.py
tests/contract/: test_add_command.py  test_complete_command.py  test_delete_command.py  test_export_command.py  test_import_command.py  test_incomplete_command.py  test_list_command.py  test_update_command.py
tests/integration/: test_arrow_navigation.py  test_cli_integration.py  test_visual_enhancements.py
tests/performance/: test_performance_benchmarks.py
(+52 files in other folders)
