[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "console-todo-app"
version = "0.1.0"
description = "A command-line interface application for managing to-do tasks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "argparse",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-mock",
    "flake8",
    "black",
]

[project.scripts]
todo = "src.cli.cli_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = [
    # W503: line break before binary operator (not PEP8 compliant, black does this)
    'W503',
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]